adde put and post route to category
